# XDE-SwigISIRController

./: README.md  setup.py
src/: __init__.py  isir_task_manager.i  swig_isir_controller.i
src/interfaces/: isir_controller_docstrings.i  isir_controller_orocos_components.i  isir_controller_xde_model.i  typemap_eigen_lgsm.i
src/orocos/: CMakeLists.txt
